--- a/source/stylesheets/layout/_header.scss
+++ b/source/stylesheets/layout/_header.scss
@@ -36,6 +36,7 @@
   position: fixed;
   top: -100%;
   left: 0;
+  z-index: 2;
   order: 2;
   width: 100%;
   padding: 0;
